--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 									<!-- Content -->
 										<h2 id="content">Meu nome é João Gabriel</h2>
-										<p> sou estudante do curso de Ciência da Computação com previsão de conclusão para dezembro 2023.</p>
+										<p>Sou estudante do curso de Ciência da Computação com previsão de conclusão para dezembro 2023.</p>
 										<p>Trabalhei durante dois anos na área de engenharia de dados em uma empresa nacional de processamento de cartões de crédito e meios de pagamento, auxiliando o time na entrega de projetos visando melhorias no desempenho e implantação de novos métodos de pagamento</p>
 										<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção desoluções usando dados.</p>
 								</section>
